--- a/Python/Py05/Quest_c_05.ipynb
+++ b/Python/Py05/Quest_c_05.ipynb
@@ -841,7 +841,7 @@
    "id": "393943e3-f6b6-48c5-80f9-d1459e57951f",
    "metadata": {},
    "source": [
-    "# GPT를 활용"
+    "# ChatGPT 활용"
    ]
   },
   {
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 67,
    "id": "37c8db31-8d82-419d-b97c-40e3b27f0ab7",
    "metadata": {},
    "outputs": [
@@ -917,7 +917,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "사용자 이름을 입력하세요:  경환\n"
+      "사용자 이름을 입력하세요:  홍길동\n"
      ]
     },
     {
@@ -926,40 +926,48 @@
      "text": [
       "\n",
       "슬라임과의 전투를 시작합니다.\n",
-      "경환이(가) 슬라임에게 14 만큼 공격했다...!\n",
+      "홍길동이(가) 슬라임에게 13 만큼 공격했다...!\n",
       "슬라임의 체력: -1\n",
       "전투 승리!\n",
       "\n",
       "고블린과의 전투를 시작합니다.\n",
-      "경환이(가) 고블린에게 9 만큼 공격했다...!\n",
-      "고블린의 체력: 21\n",
-      "고블린이(가) 경환에게 2 만큼 공격했다...!\n",
-      "경환의 체력: 98\n",
-      "경환이(가) 고블린에게 8 만큼 공격했다...!\n",
-      "고블린의 체력: 13\n",
-      "고블린이(가) 경환에게 0 만큼 공격했다...!\n",
-      "경환의 체력: 98\n",
-      "경환이(가) 고블린에게 11 만큼 공격했다...!\n",
-      "고블린의 체력: 2\n",
-      "고블린이(가) 경환에게 0 만큼 공격했다...!\n",
-      "경환의 체력: 98\n",
-      "경환이(가) 고블린에게 5 만큼 공격했다...!\n",
+      "홍길동이(가) 고블린에게 0 만큼 공격했다...!\n",
+      "고블린의 체력: 34\n",
+      "고블린이(가) 홍길동에게 4 만큼 공격했다...!\n",
+      "홍길동의 체력: 96\n",
+      "홍길동이(가) 고블린에게 5 만큼 공격했다...!\n",
+      "고블린의 체력: 29\n",
+      "고블린이(가) 홍길동에게 16 만큼 공격했다...!\n",
+      "홍길동의 체력: 80\n",
+      "홍길동이(가) 고블린에게 0 만큼 공격했다...!\n",
+      "고블린의 체력: 29\n",
+      "고블린이(가) 홍길동에게 0 만큼 공격했다...!\n",
+      "홍길동의 체력: 80\n",
+      "홍길동이(가) 고블린에게 12 만큼 공격했다...!\n",
+      "고블린의 체력: 17\n",
+      "고블린이(가) 홍길동에게 0 만큼 공격했다...!\n",
+      "홍길동의 체력: 80\n",
+      "홍길동이(가) 고블린에게 0 만큼 공격했다...!\n",
+      "고블린의 체력: 17\n",
+      "고블린이(가) 홍길동에게 3 만큼 공격했다...!\n",
+      "홍길동의 체력: 77\n",
+      "홍길동이(가) 고블린에게 20 만큼 공격했다...!\n",
       "고블린의 체력: -3\n",
       "전투 승리!\n",
       "\n",
       "오크과의 전투를 시작합니다.\n",
-      "경환이(가) 오크에게 13 만큼 공격했다...!\n",
-      "오크의 체력: 41\n",
-      "오크이(가) 경환에게 39 만큼 공격했다...!\n",
-      "경환의 체력: 59\n",
-      "경환이(가) 오크에게 14 만큼 공격했다...!\n",
-      "오크의 체력: 27\n",
-      "오크이(가) 경환에게 49 만큼 공격했다...!\n",
-      "경환의 체력: 10\n",
-      "경환이(가) 오크에게 12 만큼 공격했다...!\n",
-      "오크의 체력: 15\n",
-      "오크이(가) 경환에게 45 만큼 공격했다...!\n",
-      "경환의 체력: -35\n",
+      "홍길동이(가) 오크에게 14 만큼 공격했다...!\n",
+      "오크의 체력: 40\n",
+      "오크이(가) 홍길동에게 28 만큼 공격했다...!\n",
+      "홍길동의 체력: 49\n",
+      "홍길동이(가) 오크에게 12 만큼 공격했다...!\n",
+      "오크의 체력: 28\n",
+      "오크이(가) 홍길동에게 21 만큼 공격했다...!\n",
+      "홍길동의 체력: 28\n",
+      "홍길동이(가) 오크에게 14 만큼 공격했다...!\n",
+      "오크의 체력: 14\n",
+      "오크이(가) 홍길동에게 33 만큼 공격했다...!\n",
+      "홍길동의 체력: -5\n",
       "전투 패배..\n",
       "게임오버\n"
      ]
