--- a/Python/Py05/Quest_c_05.ipynb
+++ b/Python/Py05/Quest_c_05.ipynb
@@ -427,6 +427,101 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 68,
+   "id": "58dd2070-a256-4b24-927e-883ca1ef3540",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "60600.0"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from random import randint\n",
+    "\n",
+    "class Account:\n",
+    "    # Q 2 클래스 변수\n",
+    "    account_cnt = 0\n",
+    "    def __init__(self, name, balance):\n",
+    "        self.deposit_cnt = 0\n",
+    "        self.name = name\n",
+    "        self.balance = int(balance)\n",
+    "        self.bank = 'SC은행'\n",
+    "\n",
+    "        nums = [3, 2, 6]\n",
+    "        parts = []\n",
+    "\n",
+    "        for n in nums:\n",
+    "            temp = ''\n",
+    "            for i in range(n):\n",
+    "                temp += str(randint(0, 9))\n",
+    "            parts.append(temp)\n",
+    "\n",
+    "        self.account_number ='-'.join(parts)\n",
+    "        # Q 2 계좌개수 증가\n",
+    "        Account.account_cnt += 1\n",
+    "        \n",
+    "    # Q3 Account 클래스로부터 생성된 계좌의 개수를 출력하는 get_account_num() 메서드 추가\n",
+    "    @classmethod\n",
+    "    def get_account_num(cls):\n",
+    "        print(cls.account_cnt)\n",
+    "        \n",
+    "    # Q4. 입금메서드: Account 클래스에 입금을 위한 deposit 메서드 추가. 입금은 최소 1원 이상만 가능\n",
+    "    # Q7. 이자지급하기: 입금횟수가 5회가 될 때 잔고를 기준으로 1%의 이자가 잔고에 추가 되도록 코드 변경\n",
+    "    def deposit(self, amount):\n",
+    "        if amount >= 1:\n",
+    "            self.balance += amount\n",
+    "\n",
+    "            self.deposit_cnt += 1\n",
+    "            if self.deposit_cnt % 5 == 0:\n",
+    "                # 이자 지급\n",
+    "                self.balance = self.balance * 1.01\n",
+    "        else:\n",
+    "            print('입금은 1원 이상만 가능합니다.')\n",
+    "            \n",
+    "    # Q5. 출금 메서드: Accout 클래스에 출금을 위한 withdraw 메서드 추가, 출금은 계좌의 잔고 이상 출금 불가\n",
+    "    def withdraw(self, amount):\n",
+    "        if self.balance > amount:\n",
+    "            self.balance -= amount\n",
+    "            return f'{amount}원이 인출되었습니다. 잔고는 {self.balance}원 입니다.'\n",
+    "        else:\n",
+    "            return f'인출하고자 하는 금액({amount}원)이 잔고({self.balance}원)를 초과하여 인출할 수 없습니다.'\n",
+    "\n",
+    "    # Q6. 정보출력 메서드: Account 인스턴스에 저장된 정보를 출력하는 display_info() 메서드 추가. 잔고는 세자리마다 쉼표를 출력\n",
+    "    # (은행이름: SC은행, 예금주: 파이썬, 계좌번호: 111-11-111111, 잔고 10,000원)\n",
+    "    def display_info(self):\n",
+    "        print(\"은행이름:\", self.bank)\n",
+    "        print(\"예금주:\", self.name)\n",
+    "        print(\"계좌번호:\", self.account_number)\n",
+    "        print('잔고:', f'{self.balance:,}원')\n",
+    "            \n",
+    "cha = Account('파이썬', 10000)\n",
+    "cha.deposit(10000)\n",
+    "cha.deposit(10000)\n",
+    "cha.deposit(10000)\n",
+    "cha.deposit(10000)\n",
+    "cha.deposit(10000)\n",
+    "cha.balance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc116cac-a87d-46d4-84d8-e61cc119bba8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " Q8. 여러객체 생성: Account 클래스로부터 3개 이상 인스턴스를 생성하고 생성된 인스턴스를 리스트에 저장"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 49,
    "id": "53db8672-ee42-4b98-b739-42b4ff713e60",
    "metadata": {},
@@ -842,6 +937,265 @@
    "metadata": {},
    "source": [
     "# ChatGPT 활용"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "254fe882-161f-484a-a273-be3b0dd22570",
+   "metadata": {},
+   "source": [
+    "Q1. Account 클래스 은행에 가서 계좌를 개설하면 은행이름, 예금주, 계좌번호, 잔액이 설정됨. Account 클래스를 생성한 후 생성자를 구현 생성자에는 예금주와 초기 잔액만 입력을 받음 은행이름은 SC은행 계좌번호는 3자리, 2자리, 6자리 ex 111-11-111111 형태로 랜덤하게 생성됨 Q 2. 클래스 변수를 사용해서 Account 클래스로부터 생성된 계좌의 개수를 저장 Q 3 클래스 변수 출력: Account 클래스로부터 생성된 계좌의 개수를 출력하는 get_account_num() 메서드 추가 Q 4. 입금메서드: Account 클래스에 입금을 위한 deposit 메서드 추가. 입금은 최소 1원 이상만 가능 Q 5. 출금 메서드: Accout 클래스에 출금을 위한 withdraw 메서드 추가, 출금은 계좌의 잔고 이상 출금 불가 Q 6. 정보출력 메서드: Account 인스턴스에 저장된 정보를 출력하는 display_info() 메서드 추가. 잔고는 세자리마다 쉼표를 출력 (은행이름: SC은행, 예금주: 파이썬, 계좌번호: 111-11-111111, 잔고 10,000원) Q 7. 이자지급하기: 입금횟수가 5회가 될 때 잔고를 기준으로 1%의 이자가 잔고에 추가 되도록 코드 변경 Q 8. 여러객체 생성: Account 클래스로부터 3개 이상 인스턴스를 생성하고 생성된 인스턴스를 리스트에 저장 Q 9. 객체 순회 반복문을 통해 리스트에 있는 객체를 순회하면서 잔고가 100만원 이상인 고객의 정보만 출력 Q10. 입금과 출금 내역이 기록되도록 코드를 업데이트 (입금 내역과 출금 내역을 출력하는 deposit_history와 withdraw_history 메서드 추가 코드 작성해 줘"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "dfee6bfd-10fb-432a-8ec3-f7005a016cd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q1) Account 클래스 생성자\n",
+      "요구사항: 은행이름=SC은행, 예금주/잔액 설정, 계좌번호 3-2-6 형태 랜덤 생성\n",
+      "결과 확인:\n",
+      "은행이름: SC은행, 예금주: 파이썬, 계좌번호: 350-62-250332, 잔고: 10,000원\n",
+      "\n",
+      "Q2) 클래스 변수로 생성된 계좌 수 저장\n",
+      "요구사항: Account로 계좌가 만들어질 때마다 count 증가\n",
+      "결과 확인: 현재 생성된 계좌 수 = 1\n",
+      "\n",
+      "Q3) get_account_num()으로 생성된 계좌 수 출력\n",
+      "요구사항: Account.get_account_num()이 계좌 수를 반환\n",
+      "결과 확인: Account.get_account_num() = 1\n",
+      "\n",
+      "Q4) deposit() 입금 메서드 (최소 1원 이상)\n",
+      "요구사항: 0원/음수 입금은 실패(False), 1원 이상 성공(True)\n",
+      "결과 확인:\n",
+      " - deposit(0)  -> False\n",
+      " - deposit(1)  -> True\n",
+      " - 입금 후 잔고 -> 10,001원\n",
+      "\n",
+      "Q5) withdraw() 출금 메서드 (잔고 이상 출금 불가)\n",
+      "요구사항: 잔고보다 큰 금액 출금 실패(False), 가능하면 성공(True)\n",
+      "결과 확인:\n",
+      " - withdraw(10,002) -> False\n",
+      " - withdraw(1) -> True\n",
+      " - 출금 후 잔고 -> 10,000원\n",
+      "\n",
+      "Q6) display_info() 정보 출력 (잔고 쉼표 포함)\n",
+      "요구사항: (잔고: 10,000원)처럼 3자리마다 쉼표\n",
+      "결과 확인:\n",
+      "은행이름: SC은행, 예금주: 파이썬, 계좌번호: 350-62-250332, 잔고: 10,000원\n",
+      "\n",
+      "Q7) 입금 5회마다 1% 이자 지급\n",
+      "요구사항: 입금 횟수가 5회가 될 때 잔고의 1%가 잔고에 추가\n",
+      "테스트 준비: 초기 잔고 10,000원 계좌 생성\n",
+      "입금 1,000원을 5회 수행 (5회째에 이자 지급)\n",
+      "결과 확인: 잔고 = 15,150원\n",
+      " - 기대 흐름: 10,000 + 1,000*5 = 15,000 / 이자 1% = 150 / 최종 15,150\n",
+      " - 입금 내역(이자 포함):\n",
+      "입금: 1,000원\n",
+      "입금: 1,000원\n",
+      "입금: 1,000원\n",
+      "입금: 1,000원\n",
+      "입금: 1,000원\n",
+      "이자: 150원\n",
+      "\n",
+      "Q8) Account 인스턴스 3개 이상 생성 후 리스트에 저장\n",
+      "요구사항: 3개 이상 생성해서 리스트에 저장\n",
+      "결과 확인: 리스트 길이 = 3\n",
+      "\n",
+      "Q9) 리스트 순회: 잔고 100만원 이상 고객만 출력\n",
+      "요구사항: balance >= 1,000,000인 계좌만 display_info() 출력\n",
+      "결과 확인:\n",
+      "은행이름: SC은행, 예금주: B, 계좌번호: 611-36-067129, 잔고: 1,500,000원\n",
+      "은행이름: SC은행, 예금주: C, 계좌번호: 250-37-044377, 잔고: 2,000,000원\n",
+      "\n",
+      "Q10) 입금/출금 내역 기록 + history 메서드\n",
+      "요구사항: deposit/withdraw 내역이 기록되고 출력 가능\n",
+      "결과 확인: 현재 정보\n",
+      "은행이름: SC은행, 예금주: 내역테스트, 계좌번호: 504-99-588961, 잔고: 14,000원\n",
+      " - deposit_history():\n",
+      "입금: 5,000원\n",
+      "입금: 2,000원\n",
+      " - withdraw_history():\n",
+      "출금: 3,000원\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "\n",
+    "class Account:\n",
+    "    # Q2: 생성된 계좌 수 저장 (클래스 변수)\n",
+    "    account_count = 0\n",
+    "\n",
+    "    def __init__(self, owner, balance):\n",
+    "        # Q1\n",
+    "        self.bank = \"SC은행\"\n",
+    "        self.owner = owner\n",
+    "        self.balance = int(balance)\n",
+    "\n",
+    "        # 계좌번호: 3자리-2자리-6자리 랜덤 생성\n",
+    "        self.account_number = (\n",
+    "            f\"{random.randint(0, 999):03d}-\"\n",
+    "            f\"{random.randint(0, 99):02d}-\"\n",
+    "            f\"{random.randint(0, 999999):06d}\"\n",
+    "        )\n",
+    "\n",
+    "        # Q7: 입금 횟수\n",
+    "        self.deposit_count = 0\n",
+    "\n",
+    "        # Q10: 거래 내역\n",
+    "        self._deposit_logs = []    # [(\"입금\"/\"이자\", amount), ...]\n",
+    "        self._withdraw_logs = []   # [(\"출금\", amount), ...]\n",
+    "\n",
+    "        Account.account_count += 1\n",
+    "\n",
+    "    # Q3: 클래스 변수 출력 메서드\n",
+    "    @classmethod\n",
+    "    def get_account_num(cls):\n",
+    "        return cls.account_count\n",
+    "\n",
+    "    # Q4: 입금(최소 1원)\n",
+    "    def deposit(self, amount):\n",
+    "        amount = int(amount)\n",
+    "        if amount < 1:\n",
+    "            return False\n",
+    "\n",
+    "        self.balance += amount\n",
+    "        self.deposit_count += 1\n",
+    "        self._deposit_logs.append((\"입금\", amount))\n",
+    "\n",
+    "        # Q7: 5회마다 1% 이자\n",
+    "        if self.deposit_count % 5 == 0:\n",
+    "            interest = int(self.balance * 0.01)\n",
+    "            self.balance += interest\n",
+    "            self._deposit_logs.append((\"이자\", interest))\n",
+    "\n",
+    "        return True\n",
+    "\n",
+    "    # Q5: 출금(잔고 이상 불가)\n",
+    "    def withdraw(self, amount):\n",
+    "        amount = int(amount)\n",
+    "        if amount < 1:\n",
+    "            return False\n",
+    "        if amount > self.balance:\n",
+    "            return False\n",
+    "\n",
+    "        self.balance -= amount\n",
+    "        self._withdraw_logs.append((\"출금\", amount))\n",
+    "        return True\n",
+    "\n",
+    "    # Q6: 정보 출력(쉼표)\n",
+    "    def display_info(self):\n",
+    "        print(\n",
+    "            f\"은행이름: {self.bank}, \"\n",
+    "            f\"예금주: {self.owner}, \"\n",
+    "            f\"계좌번호: {self.account_number}, \"\n",
+    "            f\"잔고: {self.balance:,}원\"\n",
+    "        )\n",
+    "\n",
+    "    # Q10: 입금/출금 내역 출력\n",
+    "    def deposit_history(self):\n",
+    "        for kind, amt in self._deposit_logs:\n",
+    "            print(f\"{kind}: {amt:,}원\")\n",
+    "\n",
+    "    def withdraw_history(self):\n",
+    "        for kind, amt in self._withdraw_logs:\n",
+    "            print(f\"{kind}: {amt:,}원\")\n",
+    "\n",
+    "\n",
+    "# ============================\n",
+    "# 여기부터 “문제 1~10 검증 출력”\n",
+    "# ============================\n",
+    "\n",
+    "print(\"Q1) Account 클래스 생성자\")\n",
+    "acc1 = Account(\"파이썬\", 10000)\n",
+    "print(\"요구사항: 은행이름=SC은행, 예금주/잔액 설정, 계좌번호 3-2-6 형태 랜덤 생성\")\n",
+    "print(\"결과 확인:\")\n",
+    "acc1.display_info()\n",
+    "print()\n",
+    "\n",
+    "print(\"Q2) 클래스 변수로 생성된 계좌 수 저장\")\n",
+    "print(\"요구사항: Account로 계좌가 만들어질 때마다 count 증가\")\n",
+    "print(\"결과 확인: 현재 생성된 계좌 수 =\", Account.account_count)\n",
+    "print()\n",
+    "\n",
+    "print(\"Q3) get_account_num()으로 생성된 계좌 수 출력\")\n",
+    "print(\"요구사항: Account.get_account_num()이 계좌 수를 반환\")\n",
+    "print(\"결과 확인: Account.get_account_num() =\", Account.get_account_num())\n",
+    "print()\n",
+    "\n",
+    "print(\"Q4) deposit() 입금 메서드 (최소 1원 이상)\")\n",
+    "print(\"요구사항: 0원/음수 입금은 실패(False), 1원 이상 성공(True)\")\n",
+    "print(\"결과 확인:\")\n",
+    "print(\" - deposit(0)  ->\", acc1.deposit(0))\n",
+    "print(\" - deposit(1)  ->\", acc1.deposit(1))\n",
+    "print(\" - 입금 후 잔고 ->\", f\"{acc1.balance:,}원\")\n",
+    "print()\n",
+    "\n",
+    "print(\"Q5) withdraw() 출금 메서드 (잔고 이상 출금 불가)\")\n",
+    "print(\"요구사항: 잔고보다 큰 금액 출금 실패(False), 가능하면 성공(True)\")\n",
+    "print(\"결과 확인:\")\n",
+    "too_much = acc1.balance + 1\n",
+    "print(f\" - withdraw({too_much:,}) ->\", acc1.withdraw(too_much))\n",
+    "print(\" - withdraw(1) ->\", acc1.withdraw(1))\n",
+    "print(\" - 출금 후 잔고 ->\", f\"{acc1.balance:,}원\")\n",
+    "print()\n",
+    "\n",
+    "print(\"Q6) display_info() 정보 출력 (잔고 쉼표 포함)\")\n",
+    "print(\"요구사항: (잔고: 10,000원)처럼 3자리마다 쉼표\")\n",
+    "print(\"결과 확인:\")\n",
+    "acc1.display_info()\n",
+    "print()\n",
+    "\n",
+    "print(\"Q7) 입금 5회마다 1% 이자 지급\")\n",
+    "print(\"요구사항: 입금 횟수가 5회가 될 때 잔고의 1%가 잔고에 추가\")\n",
+    "acc7 = Account(\"이자테스트\", 10000)\n",
+    "print(\"테스트 준비: 초기 잔고 10,000원 계좌 생성\")\n",
+    "print(\"입금 1,000원을 5회 수행 (5회째에 이자 지급)\")\n",
+    "for i in range(5):\n",
+    "    acc7.deposit(1000)\n",
+    "print(\"결과 확인: 잔고 =\", f\"{acc7.balance:,}원\")\n",
+    "print(\" - 기대 흐름: 10,000 + 1,000*5 = 15,000 / 이자 1% = 150 / 최종 15,150\")\n",
+    "print(\" - 입금 내역(이자 포함):\")\n",
+    "acc7.deposit_history()\n",
+    "print()\n",
+    "\n",
+    "print(\"Q8) Account 인스턴스 3개 이상 생성 후 리스트에 저장\")\n",
+    "accounts = [\n",
+    "    Account(\"A\", 500000),\n",
+    "    Account(\"B\", 1500000),\n",
+    "    Account(\"C\", 2000000),\n",
+    "]\n",
+    "print(\"요구사항: 3개 이상 생성해서 리스트에 저장\")\n",
+    "print(\"결과 확인: 리스트 길이 =\", len(accounts))\n",
+    "print()\n",
+    "\n",
+    "print(\"Q9) 리스트 순회: 잔고 100만원 이상 고객만 출력\")\n",
+    "print(\"요구사항: balance >= 1,000,000인 계좌만 display_info() 출력\")\n",
+    "print(\"결과 확인:\")\n",
+    "for acc in accounts:\n",
+    "    if acc.balance >= 1_000_000:\n",
+    "        acc.display_info()\n",
+    "print()\n",
+    "\n",
+    "print(\"Q10) 입금/출금 내역 기록 + history 메서드\")\n",
+    "print(\"요구사항: deposit/withdraw 내역이 기록되고 출력 가능\")\n",
+    "acc10 = Account(\"내역테스트\", 10000)\n",
+    "acc10.deposit(5000)\n",
+    "acc10.withdraw(3000)\n",
+    "acc10.deposit(2000)\n",
+    "print(\"결과 확인: 현재 정보\")\n",
+    "acc10.display_info()\n",
+    "print(\" - deposit_history():\")\n",
+    "acc10.deposit_history()\n",
+    "print(\" - withdraw_history():\")\n",
+    "acc10.withdraw_history()\n"
    ]
   },
   {
