Main Quest 01 다시  제출

--- a/Main_Quest/Quest01/Spaceship_titanic.ipynb
+++ b/Main_Quest/Quest01/Spaceship_titanic.ipynb
@@ -2707,6 +2707,149 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "781f644f-c5ef-4f59-ad16-2f4f3e9a2405",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best weights: [0. 0. 1.]\n",
+      "best thr: 0.5000000000000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"best weights:\", best[\"weights\"])\n",
+    "print(\"best thr:\", best[\"thr\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "1cb3ba4f-322b-451a-8770-3e5dc16b326d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "probas shape: (3, 8693)\n",
+      "test_probas shape: (3, 4277)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"probas shape:\", probas.shape)         # (n_models, n_train)\n",
+    "print(\"test_probas shape:\", test_probas.shape) # (n_models, n_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "4a31e270-8c02-4fd4-8444-215ec0afe988",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved: submission_cat.csv\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Transported</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0013_01</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0018_01</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0019_01</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0021_01</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0023_01</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  PassengerId  Transported\n",
+       "0     0013_01         True\n",
+       "1     0018_01        False\n",
+       "2     0019_01         True\n",
+       "3     0021_01         True\n",
+       "4     0023_01        False"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ---------------------------------------------------------\n",
+    "# CatBoost 단독 test 확률로 제출 생성 (submission_cat.csv)\n",
+    "# ---------------------------------------------------------\n",
+    "\n",
+    "# 앙상블 모델이지만 CatBoost 만 사용함. 그래서 CatBoost 모델만 사용한 경우와 결과가 같음.\n",
+    "\n",
+    "thr_cat = 0.5  # 또는 위 best_thr 사용\n",
+    "\n",
+    "submission_cat = pd.DataFrame({\n",
+    "    \"PassengerId\": test_processed[\"PassengerId\"].values,\n",
+    "    \"Transported\": (cb_test >= thr_cat).astype(bool)\n",
+    "})\n",
+    "\n",
+    "submission_cat_path = \"submission_cat.csv\"\n",
+    "submission_cat.to_csv(submission_cat_path, index=False)\n",
+    "\n",
+    "print(\"Saved:\", submission_cat_path)\n",
+    "submission_cat.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "11f097ab-f7c8-4db9-b823-d2e071d2e3a0",
    "metadata": {},
