보고서 형식 정리

--- a/Data_Analysis/DA02/kaggle_project.ipynb
+++ b/Data_Analysis/DA02/kaggle_project.ipynb
@@ -6,7 +6,7 @@
    "id": "24353688-b2cf-428f-afba-d27c22ff9284",
    "metadata": {},
    "source": [
-    "## 1차 코드 개선"
+    "## Kaggle Housing 가격 예측 프로젝트 보고서"
    ]
   },
   {
@@ -19,7 +19,27 @@
    "id": "30a7b330-872b-41d0-b5b1-17fd8e3d25da",
    "metadata": {},
    "source": [
-    "#### 캐글 전체 제출 결과\n",
+    "### 1. 프로젝트 목표\n",
+    "#### 회귀모델 예측정확도가 기준 이상 높게 나왔는가?\n",
+    " - 캐글 리더보드 Private Score 110,000 이하 달성을 목표\n",
+    "#### 전처리, 학습과정 및 결과에 대한 설명이 시각화를 포함하여 체계적으로 진행되었는가?\n",
+    "- 데이터 전처리 및 피처 엔지니어링\n",
+    " -- train과 test 데이터를 concat하여 동일 전처리를 수행\n",
+    " -- date 컬럼을 year, month로 분해.\n",
+    " -- zipcode는 범주형(category)으로 변환.\n",
+    " -- 왜도가 큰 면적 관련 피처에 log1p 변환을 적용.\n",
+    " -- 타깃 변수 price에도 log1p 변환을 적용하여 RMSLE 성능을 개선함.\n",
+    "\n",
+    "#### 모델 학습 및 최적화\n",
+    " - 모델: LightGBM Regressor\n",
+    " - 검증 방법: 5-Fold KFold 교차검증\n",
+    " - 평가 지표: RMSLE\n",
+    "  -- GridSearchCV를 활용하여 주요 하이퍼파라미터를 최적화함.\n",
+    "\n",
+    "#### 결과\n",
+    "- Public Score: 109,136.76\n",
+    "- Private Score: 109,724.38\n",
+    " -- 목표였던 Private Score 110,000 이하를 달성.\n",
     "\n",
     "![image.png](attachment:a581e3d4-b5b9-4eb8-bf68-8a52726c7c12.png)"
    ]
