--- a/Data_Analysis/DA02/kaggle_project.ipynb
+++ b/Data_Analysis/DA02/kaggle_project.ipynb
@@ -6,7 +6,7 @@
    "id": "24353688-b2cf-428f-afba-d27c22ff9284",
    "metadata": {},
    "source": [
-    "## Kaggle Housing 가격 예측 프로젝트 보고서"
+    "## Kaggle Housing 가격 예측 프로젝트 보고 및 회고"
    ]
   },
   {
@@ -40,6 +40,14 @@
     "- Public Score: 109,136.76\n",
     "- Private Score: 109,724.38\n",
     " -- 목표였던 Private Score 110,000 이하를 달성.\n",
+    "\n",
+    "### 회고\n",
+    "- 개인적으로 캐글 경진에 참여해보고 싶었던 적이 있었습니다.\n",
+    "- 통계분석에 대한 자신감이 있어서가 아니라, 그냥 막연한 꿈같은 것이었습니다.\n",
+    "- 이렇게 파일을 제출하고 결과를 받아 보니 묘한 기분이 드네요.\n",
+    "- 좀 더 재미있게 프로젝트에 참여할 동기부여가 된 것 같습니다.\n",
+    "- 즐거운 시간이었습니다.\n",
+    "- 그래서 몇번 더 해봤는데, 점점 성적이 안좋아지네요. \n",
     "\n",
     "![image.png](attachment:a581e3d4-b5b9-4eb8-bf68-8a52726c7c12.png)"
    ]
