--- a/Data_Analysis/DA01/reg_project.ipynb
+++ b/Data_Analysis/DA01/reg_project.ipynb
@@ -2,6 +2,68 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "f0d68f51-a6f4-4f02-b2e9-66f223596866",
+   "metadata": {},
+   "source": [
+    "## 프로젝트 보고 및 회고\n",
+    "### 프로젝트 1. 당뇨병 데이터 다중 선형 회귀\n",
+    "####  진행 내용\n",
+    "- sklearn diabetes dataset을 활용하여 다중 선형 회귀 구현\n",
+    " -- NumPy 기반으로 모델 y=XW+b를 구현하고,\n",
+    " -- MSE 손실 함수와 gradient를 수식 기반\n",
+    "\n",
+    "- 경사하강법을 이용해 가중치와 편향을 학습.\n",
+    "\n",
+    "- 성능 결과\n",
+    " -- 테스트 데이터 기준 MSE = 2870.34\n",
+    " -- 목표 기준(MSE ≤ 3000) 달성\n",
+    "\n",
+    "- 시각화\n",
+    "-- 실제값과 예측값을 scatter plot으로 비교하여 모델 예측 경향을 확인함\n",
+    "\n",
+    "\n",
+    "### 프로젝트 2. 자전거 수요 예측 회귀 모델\n",
+    "#### 진행 내용\n",
+    "- Bike Sharing 데이터를 활용하여 회귀 모델 구현\n",
+    "-- datetime 컬럼을 분해하여\n",
+    "-- year, month, day, hour 등 파생 변수를 생성함.\n",
+    "\n",
+    "- 데이터 분포를 countplot으로 시각화하여 시간 패턴 분석\n",
+    " -- temp, humidity, windspeed 등을 feature로 사용해 모델 학습.\n",
+    "\n",
+    "- 성능 결과\n",
+    " --  MSE = 19961.90\n",
+    " -- RMSE = 141.29\n",
+    "\n",
+    "- 목표 기준(RMSE ≤ 150) 달성\n",
+    "\n",
+    "-  시각화\n",
+    " -- temp / humidity / hour 등과 대여 수(count)를 비교하여\n",
+    " -- 실제값과 예측값을 함께 시각화함."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e9e3c80-1fda-46b3-9130-9dd4d19d89b8",
+   "metadata": {},
+   "source": [
+    "### 프로젝트 회고\n",
+    "\n",
+    "#### 배운 점\n",
+    "- 선형 회귀 모델을 직접 구현하며 gradient 개념과 학습 과정을 명확히 이해할 수 있었다.\n",
+    "- datetime 데이터를 파생 변수로 변환해야 모델이 시간 패턴을 학습할 수 있다는 점을 이해하였다.\n",
+    "\n",
+    "#### 잘한 점\n",
+    "- 팀 피드백 이후 코드를 다시 점검하며 데이터 확인과 gradient 부분을 보완하였다.\n",
+    "- 요구된 시각화뿐 아니라 추가 변수(hour 등) 분석도 수행하였다.\n",
+    "\n",
+    "#### 개선할 점\n",
+    "- 코드 결과만 확인하지 말고 모델 성능 변화 이유를 더 깊게 분석해야 한다.\n",
+    "- 앞으로는 데이터 분석 → 모델 → 평가 흐름을 계획적으로 진행할 예정이다.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "eadb9425-c12e-4156-90ec-9a7820a7bf48",
    "metadata": {},
    "source": [
@@ -790,10 +852,7 @@
     "\n",
     "datetime은 문자열 → 👉 연/월/일/시간 등으로 파생 변수 생성 필요\n",
     "\n",
-    "casual, registered는 👉 예측에 쓰면 데이터 누수(leakage) → 보통 제거\n",
-    "\n",
-    "한 줄 요약하면\n",
-    "결측치 없는 깔끔한 데이터이며, datetime 처리와 타깃 누수 컬럼 제거가 핵심 포인트입니다\n"
+    "casual, registered는 👉 예측에 쓰면 데이터 누수(leakage) → 보통 제거\n"
    ]
   },
   {
