Add Motercycle 피처엔지니어링

--- a/Team_Proj/Motercycle.ipynb
+++ b/Team_Proj/Motercycle.ipynb
@@ -4352,16 +4352,63 @@
    "id": "572d4b3d-3fd7-4404-84cb-14fb00fba3b7",
    "metadata": {},
    "source": [
-    "### 개선 1단계 - 피처엔지니어링"
+    "## 3. 피처엔지니어링 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43059043-e36d-49ea-bb2b-513b70faabb4",
+   "metadata": {},
+   "source": [
+    "### 1. 피처엔지니어링 목표(방향)\n",
+    "\n",
+    "\n",
+    "### 1순위: Gamma + Crop(하단 중심)\n",
+    "- 저조도에서 선이 안 보이는 문제를 직접 건드림(Gamma)\n",
+    "- Lane이 실제로 많이 있는 영역(하단)을 더 크게 보게 만듦(Crop)\n",
+    "- RandomGamma(0.5~2.0) (어두운 쪽 강화 비중 ↑)\n",
+    "-Bottom-center crop 또는 Random crop with lane-presence\n",
+    "- 원본(또는 768) → 하단 60~70% 영역 중심으로 512 crop → resize 유지\n",
+    "\n",
+    "### 2순위: CLAHE(약하게) + Crop(하단 중심)\n",
+    "\n",
+    "- 야간에서 국부 대비를 살려 “선”을 띄우는 데 강함. 단, 과하면 노이즈도 키우므로 “약하게”가 중요\n",
+    "- CLAHE(clipLimit=2~3, tileGrid=8x8) (RGB 전체 or L 채널만)\n",
+    "- Bottom-center crop / lane-aware crop\n",
+    "\n",
+    "### 3순위: Gamma + Contrast/ColorJitter\n",
+    "- 저조도 분포를 넓게 커버하면서(감마)\n",
+    "- 대비를 흔들어 라인을 다양한 조건에서 보게 함(contrast)\n",
+    "- RandomGamma(0.5~2.0)\n",
+    "- ColorJitter(contrast 중심, brightness는 약하게)\n",
+    "- contrast 0.6~1.6, brightness 0.8~1.2\n",
+    "\n",
+    "### 4순위: CLAHE(약하게) + Gamma\n",
+    "- CLAHE로 “국부 대비”를 올리고\n",
+    "- Gamma로 “전체 밝기 분포”를 흔들어 저조도 적응 강화. 단, 둘 다 강하면 과보정/노이즈 증폭 위험\n",
+    "- CLAHE 약하게 → Gamma 약~중. 팁: 확률로 켜기(예: CLAHE 0.3, Gamma 0.7)\n",
+    "- \n",
+    "### 5순위: Gamma + Noise(ISO 흉내)\n",
+    "- 어두운 환경의 핵심 난제는 “노이즈+저대비”라서\n",
+    "- Lane이 노이즈에 묻혀도 버티게 만들 수 있음\n",
+    "- RandomGamma(0.5~2.0)\n",
+    "- Gaussian/Poisson noise (약~중)\n",
+    "\n",
+    "### Gamma + Motion/Defocus Blur\n",
+    "- 야간 주행에서 Lane은 흔들림/블러에 잘 죽음. 다만 너무 강하면 학습이 어려워져서 우선순위는 낮춤\n",
+    "- RandomGamma\n",
+    "- MotionBlur(약) 또는 DefocusBlur(약)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8afa922e-451e-49bd-a8f9-62b84ccaaea9",
+   "id": "59bd0e3b-254a-483d-959a-dd70e8609560",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### 2. 진행"
+   ]
   }
  ],
  "metadata": {
